Fri Feb 11 23:17:04 2011  Tanaka Akira  <akr@fsij.org>

	* ext/dl/cfunc.c: parenthesize macro arguments.

Fri Feb 11 21:41:53 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bin/testrb, test/runner.rb, lib/test/unit.rb: improve backward
	  compatibility.

Fri Feb 11 19:45:26 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_cleanup): use rb_ary_free to free internal object.

	* gc.h (RUBY_FREE_UNLESS_NULL): get rid of double free.
	  [ruby-core:35192]

Fri Feb 11 16:57:03 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_transcode.rb (test_from_cp50221): fix wrong
	  assertion and move back.

Fri Feb 11 14:33:18 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/assertions.rb (assert_no_match): alias for
	  backward compatibility.

Fri Feb 11 12:06:48 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (add_gems, require_libraries, proc_options): add
	  --require and --gem options.

Fri Feb 11 12:03:24 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rubygems): add --disable-rubygems option.

Fri Feb 11 11:39:03 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/fake.rb.in (CROSS_COMPILING): get rid of NameError.

Thu Feb 10 23:12:34 2011  Tanaka Akira  <akr@fsij.org>

	* ext/dl/dl.h: parenthesize macro arguments.

Wed Feb  9 23:11:27 2011  Tanaka Akira  <akr@fsij.org>

	* ext/pty/pty.c: parenthesize macro arguments.

Tue Feb  8 11:47:11 2011  Loren Sands-Ramshaw  <lorensr@gmail.com>

	* array.c: documentation clarification in rotate, rotate!,
	index, and rindex. [ruby-core:35144]

Wed Feb  9 09:45:43 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/rdoc/test_rdoc_encoding.rb: remove unnecessary (and wrong)
	  platform-dependent hacks.

Wed Feb  9 00:47:18 2011  Tanaka Akira  <akr@fsij.org>

	* ext/etc/etc.c: parenthesize macro arguments.

Tue Feb  8 19:38:00 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-expr-beg): fix for invalid nest errors.
